fix css, move mouse monitor graph so it doesnt overlap with labels

--- a/app/css/view/_mouse.scss
+++ b/app/css/view/_mouse.scss
@@ -106,9 +106,9 @@
         -o-transform: rotate(-4deg);
         transform: rotate(-4deg);
         left: 64px;
-        top: 360px;
+        top: 365px;
         width: 257px;
-        height: 190px;
+        height: 185px;
     }
 
     .dead-mouse {
